fixed letterspacing

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ body{
     font-family: var(--primary-typeface);
     font-size: 1rem;
     font-weight: var(--font-weight_light);
-    letter-spacing: 0.5px;
+    letter-spacing: 0px;
     line-height: 1.6;
 }
 
@@ -227,7 +227,7 @@ img{
 .work_intro{
     grid-column: 2/8;
     font-size: 2.75rem;
-    letter-spacing: 0.5px;
+    letter-spacing: 0px;
     margin-bottom: 0.625em;
 }
 
@@ -238,7 +238,7 @@ img{
     color: inherit;
     grid-column: 2/8;
     font-size: 2.75rem;
-    letter-spacing: 0.5px;
+    letter-spacing: 0px;
     font-weight: var(--font-weight_light);
 }
 
